--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Coop IT Easy SCRLfs
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 name: Create and publish Docker image
 
 on:
