Specify running_env = test
Signed-off-by: Carmen Bianca Bakker <carmen@coopiteasy.be>

--- a/odoo.cfg
+++ b/odoo.cfg
@@ -3,6 +3,7 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 [options]
+running_env = test
 addons_path =
     /src/odoo/odoo/addons,
     /src/odoo/addons,
