--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            type=edge,prefix={{ matrix.odoo_version }}-{{ matrix.python_version }}-,branch=$repo.default_branch
+            type=ref,event=branch,prefix={{ matrix.odoo_version }}-{{ matrix.python_version }}-
             type=semver,pattern={{ matrix.odoo_version }}.{{ version }}-{{ matrix.python_version }}
 
       - name: Build and push Docker image
