--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,8 +46,8 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            type=ref,event=branch,prefix={{ matrix.odoo_version }}-{{ matrix.python_version }}-
-            type=semver,pattern={{ matrix.odoo_version }}.{{ version }}-{{ matrix.python_version }}
+            type=ref,event=branch,prefix=${{ matrix.odoo_version }}-${{ matrix.python_version }}-
+            type=semver,pattern=${{ matrix.odoo_version }}.{{version}}-${{ matrix.python_version }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
